--- a/honestly.html
+++ b/honestly.html
@@ -99,9 +99,9 @@
     </div>
 
     <footer class="text-center text-lg-start " style="background-color:#680747 ; ">
-        <div class="text-center p-3 text-light ">
-            © 2022 Copyright
-            <a class="text-light " href="index.html ">Jahanvi.com</a>
+        <div class="text-center p-3 text-light">
+            © 2020 Copyright By
+            <a class="text-light text text-decoration-none" href="index.html ">Jahanvi</a>
         </div>
     </footer>
     <button onclick="topFunction()" id="myBtn"><i class="fa-solid fa-circle-up"></i></button>
