--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
         #myBtn:hover {
             background-color: #680747;
         }
+        
         body {
-    background-image: url("images/background.jpg");
-    background-repeat: no-repeat;
-    background-size: cover;
-}
+            background-image: url("images/background.jpg");
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
     </style>
 
 
@@ -76,10 +77,10 @@
             </div>
         </div>
     </section>
-    <footer class="text-center text-lg-start" style="background-color:#680747 ;">
-        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-            © 2022 Copyright
-            <a class="text-light" href="index.html">Jahanvi.com</a>
+    <footer class="text-center text-lg-start " style="background-color:#680747 ; ">
+        <div class="text-center p-3 text-light">
+            © 2020 Copyright By
+            <a class="text-light text text-decoration-none" href="index.html ">Jahanvi</a>
         </div>
     </footer>
     <button onclick="topFunction()" id="myBtn"><i class="fa-solid fa-circle-up"></i></button>
