--- a/contact.html
+++ b/contact.html
@@ -184,7 +184,7 @@
                             <p class="card-text text-light">
                                 <a href="mailto:Jrandhejiya@myseneca" style="text-decoration:none ;color: white;">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Jrandhejiya@myseneca.ca</span></a></p>
                             <h5><i class="fa-solid fa-location-dot"></i> Address : </h5>
-                            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;19 xyz gate , Toronto City, Scarborough , Canda
+                            <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;19 xyz gate , Toronto City, Scarborough , Canada
                             </p>
                             <h5><i class="fa-solid fa-envelopes-bulk"></i> Postal Code : </h5>
                             <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;M1V1X6
