--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <div class="position-absolute top-50 start-50 translate-middle">
                 <main class="px-3">
                     <h1 style="color:#212121;">Jahanvi Jitendrakumar Randhejiya</h1>
-                    <p class="lead"><br><br></p>
+                    <p class="lead"><br></p>
                     <p class="lead">
                         <a href="resume.html" class="btn btn-lg btn-secondary fw-bold border-white bg-warning">Check Resume</a>
                     </p>
